# bucketdock

./: AGENTS.md  BRAND.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  SECURITY.md  next.config.ts  package.json  pnpm-lock.yaml  release-please-config.json  vitest.config.ts
.github/workflows/: pages.yml  release.yml  smoke.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands_conns.rs  commands_s3.rs  commands_transfers.rs  connections.rs  error.rs  lib.rs  s3.rs  state.rs
src/app/: globals.css  layout.tsx
src/components/: app-shell.tsx  buckets-pane.tsx  connection-form-modal.tsx  connections-sidebar.tsx  copy-to-modal.test.tsx  copy-to-modal.tsx  delete-connection-confirm.tsx  file-preview-modal.tsx  object-browser.tsx  object-info-modal.tsx  transfer-queue.tsx
src/components/ui/: button.tsx  context-menu.tsx  empty-state.tsx  info-hint.tsx  input.tsx  label.tsx  modal.tsx  select.tsx  skeleton.tsx  spinner.tsx  textarea.tsx  tooltip.tsx
src/lib/: connection-errors.test.ts  connection-errors.ts  copy-targets.test.ts  copy-targets.ts  mime.test.ts  mime.ts  security.test.ts  tauri.test.ts  tauri.ts
src/store/: app-store.test.ts  app-store.ts  transfers-store.ts
website/: CNAME  docs.html  download.html  index.html  install.html  styles.css
